# Social_Media_Agents

lnk_crew/: README.md  pyproject.toml
lnk_crew/src/lnk_crew/: crew.py  main.py
lnk_crew/src/lnk_crew/config/: agents.yaml  tasks.yaml
lnk_crew/src/lnk_crew/examples/: delegation_usage.py
lnk_crew/src/lnk_crew/tools/: custom_tool.py  delegate_work_tool.py
